--- a/src/components/InsertWord/Definition/Bubble.css
+++ b/src/components/InsertWord/Definition/Bubble.css
@@ -1,9 +1,9 @@
 .bubble__title {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .bubble__subtitle {
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .bubble__text {
